--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -50,7 +50,7 @@ $subtitle-color: $grey-light;
 $subtitle-strong-color: $grey-light;
 
 $text: #fff;
-$text-light: lighten($text, 10);
+//$text-light: lighten($text, 10);
 $text-strong: darken($text, 5);
 
 $box-color: $text;
